demo/istio/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: onboard-dr
spec:
  host: onboard
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
  - name: yellow
    labels:
      version: yellow
