demo/istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onboard-vs
spec:
  hosts:
  - "*"
  gateways:
  - onboard-gw
  http:
  - match:
    - uri:
        prefix: /green
    route:
    - destination:
        host: onboard.istio.svc.cluster.local
        subset: green
  - route:
    - destination:
        host: onboard.istio.svc.cluster.local
        subset: yellow
      weight: 70
    - destination:
        host: onboard.istio.svc.cluster.local
        subset: blue
      weight: 30
